Prueba modificacion commit

--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
 
         <p>Festeja cualquier evento, desde cumpleaños, graduaciones, bautismos hasta casamientos en nuestra quinta
           "Ensueños", ubicada en las afueras de Villa constitucion vas a estar en un ambiente rodeado de paz para pasar
-          la mejor tarde con familia o amigos</p>
+          la mejor tarde con  sfamilia o amigos</p>
 
       </div>
 
