--- a/Index.html
+++ b/Index.html
@@ -66,8 +66,8 @@
         <h1>¡Veni a pasar una tarde hermosa!</h1>
 
         <p>Festeja cualquier evento, desde cumpleaños, graduaciones, bautismos hasta casamientos en nuestra quinta
-          "Ensueños", ubicada en las afueras de Villa constitucion vas a estar en un ambiente rodeado de paz para pasar
-          la mejor tarde con  sfamilia o amigos</p>
+          "Ensueños", ubicada en las afueras de Villa constitucion, vas a estar en un ambiente rodeado de paz para pasar
+          la mejor tarde con familia o amigos</p>
 
       </div>
 
