--- a/Register.html
+++ b/Register.html
@@ -38,7 +38,7 @@
 
             <label><input type="radio" name="evento" id="">Bautismo<br></label>
 
-            <label><input type="radio" name="evento" id="">Otros<br></label>
+            <label><input type="radio" name="evento" id="" checked>Otros<br></label>
 
 
 
