--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
 
     <h3>Te dejamos informacion nuestra, datos de contacto, y enlaces a redes en caso de que tengas consultas.</h3>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card text-center" style="width: 18rem;">
         <img src="./img/doc-g.jpg" class="card-img-top" alt="Gonza">
         <div class="card-body">
             <h5 class="card-title">Gonzalo Velazquez</h5>
@@ -32,7 +32,7 @@
             <li class="list-group-item">Numero:3364-111111</li>
         </ul>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card text-center" style="width: 18rem;">
             <img src="./img/doc-p.jfif" class="card-img-top" alt="Sergio">
             <div class="card-body">
                 <h5 class="card-title">Sergio Velazquez</h5>
