--- a/Index.html
+++ b/Index.html
@@ -22,9 +22,9 @@
     var bienvenida = alert("Bienvenido, ingresa tu edad");
     var edad = prompt("Introduce tu edad");
     if (edad >= 18) {
-      alert("Bienvenido!");
+      alert("¡Bienvenido!");
     } else {
-      alert("Esta es una pagina para mayores, estas entrando bajo tu responsabilidad!");
+      alert("Esta es una pagina para mayores, estas entrando bajo tu responsabilidad");
     }
   </script>
 
@@ -66,8 +66,8 @@
         <h1>¡Veni a pasar una tarde hermosa!</h1>
 
         <p>Festeja cualquier evento, desde cumpleaños, graduaciones, bautismos hasta casamientos en nuestra quinta
-          "Ensueños", ubicada en las afueras de Villa constitucion, vas a estar en un ambiente rodeado de paz para pasar
-          la mejor tarde con familia o amigos</p>
+          "Ensueños", ubicada en las afueras de Villa constitución, vas a estar en un ambiente rodeado de paz para pasar
+          la mejor tarde con familia o amigos.</p>
 
       </div>
 
@@ -80,7 +80,7 @@
     </div>
 
 
-    <h2>Informacion general</h2>
+    <h2>Información general</h2>
     <div class="container">
       <div class="card">
         <div class="imgBx">
@@ -88,9 +88,9 @@
         </div>
         <div class="content">
           <h2>Vista desde fuera</h2>
-          <p>Como se observa, contas con el salon, baños en sus laterales (exteriores), pileta rodeada de barandas para
-            evitar cualquier tipo de accidente, parrillero y sector verde.
-            El espacio da lugar a la realizacion de multiples eventos, permite la colocacion de decoracion e incluso
+          <p>Como se observa, contás con el salon, baños en sus laterales (exteriores), pileta rodeada de barandas para
+            evitar accidentes, parrillero y sector verde.
+            El espacio da lugar a la realización de múltiples eventos, permite la colocación de decoración e incluso
             gazebos o pergolas.
           </p>
         </div>
@@ -101,9 +101,9 @@
           <img src="img/cards/salon.jpg" alt="Salon">
         </div>
         <div class="content">
-          <h2>Salon</h2>
-          <p>El salon incluye una barra la cual cuenta con multiples comodidades, como cubiertos, pava electrica,
-            cocina, productos de limpieza, entre otros; tenes a tu disposicion una mesa con 12 sillas y tres tablones
+          <h2>Salón</h2>
+          <p>El salón incluye una barra la cual cuenta con múltiples comodidades, como cubiertos, pava eléctrica,
+            cocina, productos de limpieza, entre otros; tenes a tu disposición una mesa con 12 sillas y tres tablones
             para armar, sillones, una heladera y un freezer.
             Tambien cuenta con ventiladores, dos de techo y uno de pie.
 
@@ -117,8 +117,8 @@
         </div>
         <div class="content">
           <h2>Parrillero</h2>
-          <p>Cuenta con un parrillero espacioso para realizar distintas comidas, desde lechones, hasta pizzas o
-            hamburguesas, las herramientas que se necesitan para trabajarla estan a tu disposicion (Sin embargo se dice
+          <p>Cuenta con un parrillero espacioso para realizar distintas comidas, desde lechones hasta pizzas o
+            hamburguesas, las herramientas que se necesitan para trabajarla estan a tu disposición (Sin embargo se dice
             que un buen asador siempre lleva sus herramientas para tratar la carne)</p>
         </div>
       </div>
